fix(role): harden role flows and docker test diagnostics